--- a/assets/translations/he-HE.json
+++ b/assets/translations/he-HE.json
@@ -166,7 +166,7 @@
         "staggered": "בלוקים"
     },
     "filter" : {
-        "foryou" : "בשבילך",
-        "popular" : "פופואלרי"
+        "foryou" : "For You",
+        "popular" : "Must Popular"
     }
 }
