--- a/assets/translations/he-HE.json
+++ b/assets/translations/he-HE.json
@@ -68,6 +68,7 @@
         "content": "ברוך הבא ל-Icon! אצלנו תהיה חלק מקהילות\nועולמות תוכן המדברים אליך. קבוצות הצ'אט שלנו מנוהלות\nעל ידי אייקונים, מובילי דעה ויוצרי תוכן המובילים בתחומם\nהקהל הרחב יוכל לצפות בשיחות המתקיימות 24/7 ולהגיב באמצעות חייכנים. מנהל הקבוצה יוכל לפתוח את הקבוצה לשילוב הקהל בשיחה כשיבחר. מהיום אתה חלק מקבוצות האייקונים האהובים עליך."
     },
     "chat": {
+        "compressing" : "מקבץ סרטון",
         "messageDeleted" : "הודעה נמחקה",
         "deleteMessage" : "מחק הודעה",
         "subsribe": "הצטרפות לקבוצה",
