added api for creating a group

--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -33,7 +33,7 @@
         "phoneTitle": "Before we start we need your phone\nso we can send you a PIN code.",
         "phoneSubtitle": "What is your phone number?",
         "enterCode": "Enter the PIN code from the SMS",
-        "phoneCounting": "The PIN code will arraive in {} seconds",
+        "phoneCounting": "The PIN code will arrive in {} seconds",
         "phone_tooShort": "You phone number is too short",
         "profileName": "Full name",
         "profileAge": "Age",
@@ -43,17 +43,17 @@
         "wrongName": "Please enter full name",
         "wrongAge": "Age 10+",
         "wrongCode": "Wrong code, please try again",
-        "sendAgainTitle": "I dind't recieved the code ",
+        "sendAgainTitle": "I didn't received the code ",
         "sendAgain": "Send again",
         "fullName": "Full name",
         "fullNameValidation": "Specify first and last name"
     },
     "create": {
         "groupNameHint": "Write the conversation name",
-        "groupNameDescription": "Choose category for the conversation",
-        "groupNameAppbarTitle": "Conversation subject",
+        "groupNameDescription": "Choose name for the conversation",
+        "groupNameAppbarTitle": "Conversation details",
         "categoriesSubtitle": "Choose a category",
-        "iconSubtitle": "Choose participents",
+        "iconSubtitle": "Choose participants",
         "newGroupTitle": "Create new group",
         "iconValidation": "Please choose more then one Icon",
         "categoryValidation": "You must choose more then one category",
@@ -78,7 +78,7 @@
         "welcomeContent": "Congrats!  You have joined your first group.\nJoining a group allows you to observe chat conversations between “Icons” (aka the rich and famous).\nYou can react to messages and stories using emojis.\nYou can join groups according to topics that interest you, or follow specific Icons.\nand be aware that the icons will know you're there.",
         "background": "Change background photo",
         "chooseColor": "Select background color",
-        "notification": "Mute notificatons",
+        "notification": "Mute notifications",
         "editGroup": "Add editor to the conversation",
         "exited": "Unsubscribed",
         "exit": "Exit conversation",
@@ -108,9 +108,9 @@
     },
     "story": {
         "title": "Your Story",
-        "newStory": "new ntory",
+        "newStory": "New Story",
         "addExtraMedia": "add extra photo or video",
-        "addMedia": "upload a photo or aideo",
+        "addMedia": "Upload a photo or a video",
         "uploading": "Uploading",
         "video": "Video",
         "share": "Share",
@@ -153,9 +153,9 @@
     "verify": {
         "title": "What is your email address?",
         "validation": "Check your email",
-        "welcomeTitle": "ICON Identification Proccess",
+        "welcomeTitle": "ICON Identification Process",
         "nextButton": "Send me the code",
-        "noCode": "Didn't recieved the code",
+        "noCode": "Didn't received the code",
         "sendAgain": "Send again"
     },
     "fab": {
