--- a/assets/translations/he-HE.json
+++ b/assets/translations/he-HE.json
@@ -11,12 +11,13 @@
     "search": {
         "empty_state": "לא מצאנו את מה שחיפשת\nנסה/י להקליד משהו אחר",
         "showAll": "הצג הכל",
-        "searchCategory": "חפש/י קטגוריה",
-        "searchIcon": "חפש/י אייקון",
-        "serachIconHint": "חיפוש אייקונים",
-        "searchCategoryHint": "חיפוש קטגוריות"
+        "category": "חפש/י קטגוריה",
+        "icon": "חפש/י אייקון",
+        "iconHint": "חיפוש אייקונים",
+        "categoryHint": "חיפוש קטגוריות"
     },
     "general": {
+        "send" : "שלח",
         "server_error": "תקלה בשרת, אנא נסה שנית",
         "iGotIt": "הבנתי, תודה!",
         "cancel": "בטל",
@@ -68,9 +69,9 @@
         "content": "ברוך הבא ל-Icon! אצלנו תהיה חלק מקהילות\nועולמות תוכן המדברים אליך. קבוצות הצ'אט שלנו מנוהלות\nעל ידי אייקונים, מובילי דעה ויוצרי תוכן המובילים בתחומם\nהקהל הרחב יוכל לצפות בשיחות המתקיימות 24/7 ולהגיב באמצעות חייכנים. מנהל הקבוצה יוכל לפתוח את הקבוצה לשילוב הקהל בשיחה כשיבחר. מהיום אתה חלק מקבוצות האייקונים האהובים עליך."
     },
     "chat": {
-        "compressing" : "מקבץ סרטון",
-        "messageDeleted" : "הודעה נמחקה",
-        "deleteMessage" : "מחק הודעה",
+        "compressing": "מקבץ סרטון",
+        "messageDeleted": "הודעה נמחקה",
+        "deleteMessage": "מחק הודעה",
         "subsribe": "הצטרפות לקבוצה",
         "viewerPanel": "רק מנהלי קבוצה יכולים לשלוח הודעה",
         "join": "כדי להגיב להודעות הצטרף/י לקבוצה",
@@ -121,7 +122,8 @@
         "videoGallery": "גלריית וידאו",
         "gallery": "גלריה",
         "camera": "מצלמה",
-        "videoCamera": "מצלמת וידאו"
+        "videoCamera": "מצלמת וידאו",
+        "storyDuration" : "משך הסיפור בשעות"
     },
     "drawer": {
         "groupActivity": "נתוני פעילות הקבוצה",
@@ -158,7 +160,9 @@
         "welcomeTitle": "ברוכים הבאים לתהליך ההזדהות כאייקון",
         "nextButton": "שלחו לי את הקוד",
         "noCode": "לא קיבלתי את הקוד.",
-        "sendAgain": "שלחו שוב"
+        "sendAgain": "שלחו שוב",
+        "welcome": "ברוכים הבאים לתהליך ההזדהות כאייקון",
+        "button": "שלחו לי את הקוד"
     },
     "fab": {
         "create": "קבוצה חדשה",
@@ -166,8 +170,14 @@
         "list": "רשימה",
         "staggered": "בלוקים"
     },
-    "filter" : {
-        "foryou" : "For You",
-        "popular" : "Must Popular"
+    "filter": {
+        "foryou": "For You",
+        "popular": "Must Popular"
+    },
+    "lock" : {
+        "wrongCode" : "Wrong code, try again",
+        "title" : "Enter Conversation",
+        "subtitle" : "This group is private",
+        "content" : "Please enter your personal code"
     }
 }
