--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -77,7 +77,7 @@
         "compressing": "compressing",
         "messageDeleted": "Message deleted",
         "deleteMessage": "Delete message",
-        "subsribe": "Subscribe conversation",
+        "subsribe": "Subscribe to conversation",
         "viewerPanel": "Only group managers can send a message",
         "join": "please subscribe before",
         "appbarSubtitle": "{} Icons,{} Followers",
