--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -182,5 +182,17 @@
         "title": "Enter Conversation",
         "subtitle": "This group is private",
         "content": "Please enter your personal code"
+    },
+    "redemption" : {
+        "title" : "My Balance",
+        "tabProducts" : "Products",
+        "tabPAction" : "Actions",
+        "tabVauchers" : "MyVauchers",
+        "detailProducts" : "Product that you can redeem with balance points",
+        "detailActions" : "Actions made to earn balance points",
+        "detailVauchers" : "Vaucher codes that you have redeemed",
+        "productEmpty" : "No product currently available",
+        "actionsEmpty" : "No redeem action has been taken",
+        "vaucherEmpty" : "No code, try to redeem a product first"
     }
 }
