--- a/assets/translations/he-HE.json
+++ b/assets/translations/he-HE.json
@@ -184,5 +184,17 @@
         "title": "כנס לשיחה",
         "subtitle": "זו קבוצה פרטית",
         "content": "הכנס את הקוד האישי שלך"
+    },
+    "redemption": {
+        "title": "My Balance",
+        "tabProducts": "Products",
+        "tabPAction": "Actions",
+        "tabVauchers": "MyVauchers",
+        "detailProducts": "Product that you can redeem with balance points",
+        "detailActions": "Actions made to earn balance points",
+        "detailVauchers": "Vaucher codes that you have redeemed",
+        "productEmpty": "No product currently available",
+        "actionsEmpty": "No redeem action has been taken",
+        "vaucherEmpty": "No code, try to redeem a product first"
     }
 }
