--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -187,10 +187,10 @@
         "title" : "My Balance",
         "tabProducts" : "Products",
         "tabPAction" : "Actions",
-        "tabVauchers" : "MyVauchers",
+        "tabVauchers" : "MyVouchers",
         "detailProducts" : "Product that you can redeem with balance points",
         "detailActions" : "Actions made to earn balance points",
-        "detailVauchers" : "Vaucher codes that you have redeemed",
+        "detailVauchers" : "Voucher codes that you have redeemed",
         "productEmpty" : "No product currently available",
         "actionsEmpty" : "No redeem action has been taken",
         "vaucherEmpty" : "No code, try to redeem a product first"
