--- a/assets/translations/he-HE.json
+++ b/assets/translations/he-HE.json
@@ -55,8 +55,10 @@
         "type": "בחר את סוג הקבוצה",
         "public": "פתוחה",
         "private": "מוגנת קוד",
-        "passwordDetail": "זוהי קבוצה סגורה אשר מוגנת בקוד, כאייקון תוכל לראות ולשתף את קוד הקבוצה מהגדרות של הצ׳ט",
-        "pubicDetail": "זוהי קבוצה פתוחה לכולם",
+        "premium": "פרימיום",
+        "passwordDetail": "קבוצה סגורה אשר מוגנת בקוד, כאייקון תוכל לראות ולשתף את קוד הקבוצה מהגדרות של הצ׳ט",
+        "pubicDetail": "קבוצה פתוחה לכולם",
+        "premiumDetail": "קבוצה בתשלום חד-פעמי",
         "groupNameHint": "הקלד/י כאן את נושא הקבוצה",
         "groupNameDescription": "בחר/י נושא לקבוצה החדשה. כדאי להוסיף גם אייקון.",
         "groupNameAppbarTitle": "נושא הקבוצה",
