--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -52,7 +52,7 @@
         "fullNameValidation": "Specify first and last name"
     },
     "create": {
-        "type": "conversation type",
+        "type": "Conversation Type",
         "public": "Public",
         "private": "Password",
         "premium": "Premium",
