--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -192,7 +192,7 @@
         "tabVauchers": "Vouchers",
         "tabStore": "Store",
         "detailProducts": "Product that you can redeem with balance points",
-        "detailStore": "Purchase products",
+        "detailStore": "Purchase credits",
         "detailActions": "Actions made to earn balance points",
         "detailVauchers": "Voucher codes that you have redeemed",
         "productEmpty": "No product currently available",
