--- a/assets/translations/he-HE.json
+++ b/assets/translations/he-HE.json
@@ -201,5 +201,8 @@
         "actionsEmpty" : "No redeem action has been taken",
         "vaucherEmpty" : "No code, try to redeem a product first",
         "storeEmpty" : "No products in the store"
+    },
+    "toturial" : {
+        "homeViewSwitch" : "Toggle between staggered view and list view"
     }
 }
